# projetch200

./: LICENSE  README.md  env.yml  project.ipynb  project_report.ipynb  pyproject.toml
notebooks/: project_report.ipynb
periodictable/: utils.py
periodictable/notebooks/: project_report.ipynb
periodictable/src/: README.md  cli.py  pyproject.toml
periodictable/src/periodictable/: CH-200 projet prog(Feuil1).csv  CH-200_projet_prog(Feuil1).csv  cli.py  elements_data.py  generate_structure.py  pyproject.toml  utils.py  utils1.py
periodictable/src/periodictable/tests/: test_periodictable.py
periodictable/src/tests/: test_periodictable.py
periodictable/tests/: test_periodictable.py
