[build-system] 
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "periodictable" # name of the installed package
version = "0.0.1" # version is required
dependencies = [ # specify the required package dependencies
    "PyQt5 >= 5.11",
    "pandas"
]

[tool.hatch.build.targets.wheel]
packages = ["src/periodictable"]

# https://hatch.pypa.io/1.9/config/metadata/#cli
[project.scripts]
amremover = "periodictable.cli:run"
